Fix navbar layout & list item spacing

--- a/content/css/local.css
+++ b/content/css/local.css
@@ -19,14 +19,6 @@ h2 {
     padding-bottom: 0.1em;
 }
 
-ul > li {
-    padding-bottom: 1.4em;
-}
-
-ul > li li {
-    padding-bottom: 0em;
-}
-
 .navbar ul {
     padding-top: 0;
     padding-bottom: 0;
